fixed stretch of 1 icon in 3 etapes on ie11 (desktop)

--- a/src/mrs/static/sass/index.sass
+++ b/src/mrs/static/sass/index.sass
@@ -401,6 +401,8 @@
 
             &.num-1
               margin-left: 2rem
+              align-self: flex-start
+              box-sizing: content-box
 
             &.num-2
               max-width: auto
